cluster/apps/networking/traefik/templates/proxmox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-redirect-service
spec:
  ports:
    - port: 8006
  externalIPs:
    - 192.168.1.100
