cluster/apps/networking/traefik/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: traefik-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
    - host: argocd.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
    - host: argocd.amrap030-homelab.ml
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  tls:
    - hosts:
        - argocd.amrap030.home
      secretName: traefik-cert
